--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+body,
+html {
+  height: 100%;
+  margin: 0;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.center {
+  margin: auto;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.pageContent {
+  margin: 1% 2%;
+}
