Lista Receitas - logout com sessionStorage

--- a/src/app/pages/lista-receitas/lista-receitas.component.html
+++ b/src/app/pages/lista-receitas/lista-receitas.component.html
@@ -44,7 +44,7 @@
 
     <!-- SAIR -->
     <li nz-menu-item>
-        <a routerLink="/">
+        <a (click)="logout()">
             <!-- <img src="../../../assets/imgs/"> -->
             Sair
         </a>
