Detalhes Receita - ajuste nome campo Details -> Description e Unit -> UnitMeasurement

--- a/src/app/pages/detalhes-receita/detalhes-receita.component.html
+++ b/src/app/pages/detalhes-receita/detalhes-receita.component.html
@@ -25,7 +25,7 @@
 
     <div id="divInfoRecipe">
         <h2 id="recipeName">{{recipe.Name}}</h2>
-        <p id="recipeDetails">{{recipe.Details}}</p>
+        <p id="recipeDescription">{{recipe.Description}}</p>
     </div>
 </div>
 <!-- IMAGE -->
@@ -41,7 +41,7 @@
             </div>
 
             <div class="left steps infoIngredient">
-                {{ingredient.Quantity}} {{ingredient.Unit}} - {{ingredient.Name}}
+                {{ingredient.Quantity}} {{ingredient.UnitMeasurement}} - {{ingredient.Name}}
             </div>
 
             <br />
