Remover campo UnitMeasurement

--- a/src/app/pages/detalhes-receita/detalhes-receita.component.html
+++ b/src/app/pages/detalhes-receita/detalhes-receita.component.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="left steps infoIngredient">
-                {{ingredient.Quantity}} {{ingredient.UnitMeasurement}} - {{ingredient.Name}}
+                {{ingredient.Quantity}} {{ingredient.Name}}
             </div>
 
             <br />
