Detalhes receita - alterar nome do campo ToDo para Step & Lista Receitas - colocar o caminho para pasta de imgs e getAllRecipes & configService - colocar getAllParam & README

--- a/src/app/pages/detalhes-receita/detalhes-receita.component.html
+++ b/src/app/pages/detalhes-receita/detalhes-receita.component.html
@@ -62,7 +62,7 @@
 
             <div class="left steps">
                 <h3>Passo {{ step.Order }}</h3>
-                <p>{{ step.ToDo }}</p>
+                <p>{{ step.Step }}</p>
             </div>
 
             <br />
