--- a/src/app/pages/lista-receitas/lista-receitas.component.html
+++ b/src/app/pages/lista-receitas/lista-receitas.component.html
@@ -60,7 +60,7 @@
 
     <nz-list nzBordered>
         <nz-list-item *ngFor="let recipe of listSearch">
-            <img class="imgRecipeSm" src="{{recipe.ImageURL}}">
+            <img class="imgRecipeSm" src="{{config.IMG_URL}}{{recipe.ImageURL}}">
 
             <div class="divInfoRecipe">
                 <h3>{{recipe.Name}}</h3>
@@ -69,7 +69,7 @@
             </div>
 
             <button nz-button nzType="primary" nzShape="circle" class="btnDetailsRecipe"
-                routerLink="/detalhes-receita/{{recipe.Id}}">
+                routerLink="/detalhes-receita/{{recipe._id}}">
                 Ver
                 <br>
                 receita
